.metadata/.plugins/org.eclipse.cdt.ui/EX5_Lab2.build.log
05:25:25 **** Incremental Build of configuration Debug for project EX5_Lab2 ****
make -j20 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:132:3: warning: implicit declaration of function 'updateClockBuffet'; did you mean 'updateClockBuffer'? [-Wimplicit-function-declaration]
  132 |   updateClockBuffet();
      |   ^~~~~~~~~~~~~~~~~
      |   updateClockBuffer
../Core/Src/main.c:209:13: error: invalid storage class for function 'MX_TIM2_Init'
  209 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:254:13: error: invalid storage class for function 'MX_GPIO_Init'
  254 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:393:1: error: expected declaration or statement at end of input
  393 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_TIM2_Init' used but never defined
   52 | static void MX_TIM2_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:384:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  384 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:356:6: warning: 'HAL_TIM_PeriodElapsedCallback' defined but not used [-Wunused-function]
  356 | void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:254:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  254 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:209:13: warning: 'MX_TIM2_Init' defined but not used [-Wunused-function]
  209 | static void MX_TIM2_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:173:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  173 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j20 all" terminated with exit code 2. Build might be incomplete.

05:25:25 Build Failed. 4 errors, 8 warnings. (took 159ms)

